@@ -90,6 +90,8 @@
         <string id="32154">copy dvd to iso-file</string>
         <string id="32155">resque-copy dvd to iso-file</string>
         <string id="32156">copy all vobs to harddisk</string>
+        <string id="32157">copy from slave</string>
+        <string id="32158">copy to master</string>
 
 
         <!--               --> 
@@ -120,13 +122,31 @@
         <!-- Transcode Window -->
         <!--                  -->
          
-
-
+        <string id="32180"> </string>
+        <string id="32181"> </string>
+        <string id="32182"> </string>
+        <string id="32183"> </string>
+        <string id="32184"> </string>
+        <string id="32185"> </string>
+        <string id="32186"> </string>
+        <string id="32187"> </string>
+        <string id="32188"> </string>
+        <string id="32189"> </string>
+ 
         <!--                  --> 
         <!-- User-Scripts     -->
         <!--                  -->
 
-
+        <string id="32190">Not available</string>
+        <string id="32191">Not available</string>
+        <string id="32192">Not available</string>
+        <string id="32193">Not available</string>
+        <string id="32194">Not available</string>
+        <string id="32195">Not available</string>
+        <string id="32196">Not available</string>
+        <string id="32197">Not available</string>
+        <string id="32198">Not available</string>
+        <string id="32199">Back</string>
 
         <!--               --> 
         <!-- Info          -->
@@ -164,12 +184,15 @@
         <string id="33230">Please select subtitle-track to use</string> 
         <string id="33231">DVD vobcopy startet successfull</string>
         <string id="33232">DVD vobcopy could not be started</string> 
-
+        <string id="33233">Active Job finished successfull</string> 
+        <string id="33234">Please insert empty single-layer-dvd</string> 
+        <string id="33235">Please insert empty dual-layer-dvd</string>
+        <string id="33236">This menu is only visible if there are any user-functions</string>
+        
         <!--               -->
         <!-- Error         -->
         <!--               -->
         
-
         <string id="33300">Prior to run this addon setup.sh must be executed</string> 
         <string id="33301">Inserted disc is not a Bluray-Disc</string>
         <string id="33302">Timeout t1 to short :  media/state could not be openend</string>
@@ -192,6 +215,9 @@
         <string id="33319">Network master directory not found or writeable !</string>
         <string id="33320">Network-functions are disabled.</string>
         <string id="33321">Local ssh server is not configured properly</string>
-        <string id="33322">User-functions are disabled.</string>
-
+        <string id="33322">User-functions are disabled</string>
+        <string id="33323">Error inside the active job</string>
+        <string id="33324">No connection to master possible</string>
+        <string id="33325">Burning-functions are disabled</string> 
+         
  </strings>
